Fillmap bugfix #3