@@ -9,13 +9,15 @@ import com.ez_mode.notJson.NotJSONArray;
 import com.ez_mode.notJson.NotJSONObject;
 import com.ez_mode.notJson.NotJSONTokener;
 import com.ez_mode.objects.*;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.Random;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 
 /**
  * This class is responsible for the map of the game. It contains a HashMap of StandableObjects and
@@ -72,46 +74,34 @@ public class Map implements Tickable {
     // lists for the different generated nodes
     ArrayList<Node> nodes = new ArrayList<>();
     ArrayList<Pipe> pipes = new ArrayList<>();
-    ArrayList<Node> startPPositions = new ArrayList<>();
-    ArrayList<Node> startNPositions = new ArrayList<>();
+    LinkedList<Node> startPPositions = new LinkedList<>();
+    LinkedList<Node> startNPositions = new LinkedList<>();
     // generates the different node types
     for (int i = 0; i < 10; i++) {
-      for (int j = 0; j < 10; j++) {
+      for (int j = 0; j < 9; j++) {
         Random rand = new Random();
         int randomInt = rand.nextInt(100);
-        if (i == 0) {
-          if (randomInt <= 50) {
+        if (j == 0) {
+          if (randomInt <= 60) {
             Cistern c = new Cistern(i, j);
             nodes.add(c);
             startPPositions.add(c);
           }
-        } else if (i == 9) {
-          if (randomInt <= 50) {
-            WaterSpring c = new WaterSpring(i, j);
-            nodes.add(c);
-            startNPositions.add(c);
-          }
-        } else {
-          if (randomInt <= 30) { // leaves the place empty
-          } else if (randomInt <= 70) {
-            // gameMap[i][j] = new Pipe(i, j);
-            pipes.add(new Pipe(i, j));
-          } else if (randomInt <= 80) {
-            // gameMap[i][j] = new Pump(i, j);
-            nodes.add(new Pump(i, j));
-          } else if (randomInt <= 90) {
-            // gameMap[i][j] = new Cistern(i, j);
-            Cistern c = new Cistern(i, j);
-            nodes.add(c);
-            startPPositions.add(c);
-          } else {
-            // gameMap[i][j] = new WaterSpring(i, j);
+        } else if (j == 8) {
+          if (randomInt <= 60) {
             WaterSpring w = new WaterSpring(i, j);
             nodes.add(w);
             startNPositions.add(w);
           }
+        } else {// leaves the place empty
+           if (30<=randomInt&&randomInt <= 80) {
+            // gameMap[i][j] = new Pipe(i, j);
+            pipes.add(new Pipe(i, j));
+          } else if(30<=randomInt){
+            nodes.add(new Pump(i, j));
+          }
+          }
         }
-      }
     }
 
     // create one of each node, to make sure we have each type on the map
@@ -166,8 +156,8 @@ public class Map implements Tickable {
 
     // place the characters
     for (int i = 0; i < players.size() / 2; i++) {
-      players.get(i).placeTo(startPPositions.remove(startPPositions.size() - 1));
-      players.get(i + plumberCount).placeTo(startPPositions.remove(startNPositions.size() - 1));
+      players.get(i).placeTo(startPPositions.removeLast());
+      players.get(i + plumberCount).placeTo(startNPositions.removeLast());
     }
     Main.log("Map filled!");
   }
